--- a/readme.org
+++ b/readme.org
@@ -126,7 +126,7 @@ A [[https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgp
 import cv2
 import numpy as np
 
-outfile="img/sheet_music_out.jpg"
+outfile="img/sheet_music_rotated.jpg"
 infile="img/sheet_music.jpg"
 
 img = cv2.imread(infile)
